FTP connector support passive mode

--- a/src/main/webapp/WEB-INF/zul/crawler/file/edit.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/file/edit.zul
@@ -105,6 +105,11 @@
 							value="@bind(filepathedit.currentFilePath.swiftContainer)"
 							cols="50" />
 					</row>
+					<row visible="@load(filepathedit.ftpFileType)">
+						<label value="Use Passive mode: " />
+						<checkbox
+							checked="@bind(filepathedit.currentFilePath.ftpUsePassiveMode)" />
+					</row>
 					<row>
 						<label value="Path: " />
 						<cell>
