--- a/src/main/webapp/WEB-INF/zul/home.zul
+++ b/src/main/webapp/WEB-INF/zul/home.zul
@@ -16,30 +16,22 @@
 -->
 <window apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('home') @init('com.jaeksoft.searchlib.web.controller.HomeController')">
-	<grid visible="@load(home.adminOrNoUser)" hflex="min">
+	<grid visible="@load(home.adminOrNoUser)">
 		<auxhead>
 			<auxheader colspan="4" label="Create a new index" />
 		</auxhead>
-		<columns visible="false">
-			<column align="right" />
-			<column align="left" />
-			<column align="left" />
-			<column width="82px" />
+		<columns>
+			<column label="Index name" />
+			<column label="Template" hflex="min" />
+			<column label="Type" hflex="min" />
+			<column label="Action" hflex="min" />
 		</columns>
 		<rows>
 			<row>
-				<label value="Index name: " />
-				<textbox value="@bind(home.newIndexName)" cols="50" />
-				<label
-					value="Choose a name for the index that will be created" />
-				<cell rowspan="3">
-					<image width="82px" height="79px"
-						src="/images/oss_logo.png" />
-				</cell>
-			</row>
-			<row>
-				<label value="Template: " />
+				<textbox value="@bind(home.newIndexName)" width="100%"
+					tooltiptext="Choose a name for the index that will be created" />
 				<listbox mold="select"
+					tooltiptext="@load(home.newIndexTemplate.template.description)"
 					selectedItem="@bind(home.newIndexTemplate)"
 					model="@load(home.templateList)">
 					<template name="model">
@@ -47,11 +39,6 @@
 							label="@load(each.template.publicName)" />
 					</template>
 				</listbox>
-				<label
-					value="@load(home.newIndexTemplate.template.description)" />
-			</row>
-			<row>
-				<label value="Type: " />
 				<listbox mold="select"
 					selectedItem="@bind(home.newIndexType)"
 					model="@load(home.indexTypeList)">
@@ -59,13 +46,7 @@
 						<listitem label="@load(each.label)" />
 					</template>
 				</listbox>
-				<label
-					value="@load(home.newIndexTemplate.template.description)" />
-			</row>
-			<row>
-				<cell />
 				<button label="Create" onClick="@command('onNewIndex')" />
-				<cell />
 			</row>
 		</rows>
 	</grid>
