Cluster manager UI #325

--- a/src/main/webapp/WEB-INF/zul/cluster/index.zul
+++ b/src/main/webapp/WEB-INF/zul/cluster/index.zul
@@ -16,20 +16,70 @@
 -->
 <window apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('cluster') @init('com.jaeksoft.searchlib.web.controller.ClusterComposer')">
-	<grid>
-		<columns>
-			<column align="right" hflex="min" />
-			<column align="left" hflex="min" />
-			<column align="left" />
-		</columns>
-		<rows>
-			<row>
-				<label value="Instance ID" />
-				<intbox cols="5"
-					value="@bind(cluster.clusterInstanceId.value)" />
-				<label
-					value="The ID of the instance. Each instance must have an unique value." />
-			</row>
-		</rows>
-	</grid>
+	<groupbox mold="3d">
+		<caption label="This instance" />
+		<grid>
+			<columns>
+				<column align="right" hflex="min" />
+				<column align="left" hflex="min" />
+				<column align="left" />
+			</columns>
+			<rows>
+				<row>
+					<label value="Instance ID" />
+					<intbox cols="5"
+						value="@bind(cluster.clusterInstanceId.value)" />
+					<label
+						value="The ID of the instance. Each instance must have an unique value." />
+				</row>
+			</rows>
+		</grid>
+	</groupbox>
+	<groupbox mold="3d">
+		<caption label="Register to a cluster" />
+		<label>
+			Enter the URL of an existing instance in the cluster
+		</label>
+		<grid>
+			<columns>
+				<column hflex="min" label="URL" />
+				<column hflex="min" label="Login" />
+				<column hflex="min" label="API KEY" />
+				<column hflex="min" label="Action" />
+			</columns>
+			<rows>
+				<row>
+					<textbox cols="60" />
+					<textbox cols="20" />
+					<textbox cols="32" />
+					<cell>
+						<button label="Check" />
+						<button label="Register" />
+					</cell>
+				</row>
+			</rows>
+		</grid>
+	</groupbox>
+	<groupbox mold="3d">
+		<caption label="Cluster instances" />
+		<grid model="@load(cluster.clusterManager.instances)">
+			<columns>
+				<column label="URL" hflex="min" />
+				<column label="ID" hflex="min" />
+				<column label="Status" hflex="min" />
+				<column label="Date" hflex="min" />
+				<column label="Action" />
+			</columns>
+			<rows>
+				<template name="model">
+					<row>
+						<label value="@load(each.uri)" />
+						<label value="@load(each.id)" />
+						<label value="@load(each.status)" />
+						<label value="@load(each.statusTime)" />
+					</row>
+				</template>
+			</rows>
+		</grid>
+	</groupbox>
 </window>
