--- a/src/main/webapp/WEB-INF/zul/runtime/advanced/index.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/advanced/index.zul
@@ -23,6 +23,8 @@
 			<tab id="tabSmtp" label="Mail server" />
 			<tab id="tabScheduler" label="Scheduler" />
 			<tab id="tabMisc" label="Miscellaneous" />
+			<tab id="tabAuth" label="Authentication"
+				visible="@load(advanced.instanceValid)" />
 		</tabs>
 		<tabpanels>
 			<tabpanel>
@@ -37,6 +39,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabMisc.onSelect">
 				<include src="/WEB-INF/zul/runtime/advanced/misc.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabAuth.onSelect">
+				<include src="/WEB-INF/zul/runtime/advanced/auth.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
