--- a/src/main/webapp/WEB-INF/zul/schema/auth.zul
+++ b/src/main/webapp/WEB-INF/zul/schema/auth.zul
@@ -14,7 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<panel>
+<panel apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('auth') @init('com.jaeksoft.searchlib.web.controller.schema.AuthComposer')">
 	<panelchildren>
 		<grid>
 			<columns sizable="false">
@@ -25,38 +26,53 @@
 			<rows>
 				<row>
 					<label value="Enable authentication" />
-					<checkbox checked="@bind(advanced.auth.enabled)" />
+					<checkbox checked="@bind(auth.manager.enabled)" />
 					<label
 						value="Enable the authentication. Every search requests will be filtered." />
 				</row>
 				<row>
 					<label value="User allow field: " />
-					<combobox model="@load(advanced.indexedFieldList)"
-						cols="30" value="@bind(advanced.auth.userAllowField)" />
+					<combobox model="@load(auth.indexedFieldList)"
+						cols="30" value="@bind(auth.manager.userAllowField)" />
 					<label
 						value="The field of the schema containing list of allowed users" />
 				</row>
 				<row>
 					<label value="User deny field: " />
-					<combobox model="@load(advanced.indexedFieldList)"
-						cols="30" value="@bind(advanced.auth.userDenyField)" />
+					<combobox model="@load(auth.indexedFieldList)"
+						cols="30" value="@bind(auth.manager.userDenyField)" />
 					<label
 						value="The field of the schema containing list of not allowed users" />
 				</row>
 				<row>
+					<label value="Default user: " />
+					<textbox cols="40"
+						value="@bind(auth.manager.defaultUser)" />
+					<label
+						value="The user set by default if no user is set in the indexed document" />
+				</row>
+				<row>
 					<label value="Group allow field: " />
-					<combobox model="@load(advanced.indexedFieldList)"
-						cols="30" value="@bind(advanced.auth.groupAllowField)" />
+					<combobox model="@load(auth.indexedFieldList)"
+						cols="30" value="@bind(auth.manager.groupAllowField)" />
 					<label
 						value="The field of the schema containing list of allowed groups" />
 				</row>
 				<row>
 					<label value="Group deny field: " />
-					<combobox model="@load(advanced.indexedFieldList)"
-						cols="30" value="@bind(advanced.auth.groupDenyField)" />
+					<combobox model="@load(auth.indexedFieldList)"
+						cols="30" value="@bind(auth.manager.groupDenyField)" />
 					<label
 						value="The field of the schema containing list of not allowed groups" />
 				</row>
+				<row>
+					<label value="Default group: " />
+					<textbox cols="40"
+						value="@bind(auth.manager.defaultGroup)" />
+					<label
+						value="The group set by default if no group is set in the indexed document" />
+				</row>
+
 			</rows>
 		</grid>
 	</panelchildren>
