Fixes sort issues

--- a/src/main/webapp/WEB-INF/zul/query/search/sorted.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/sorted.zul
@@ -27,6 +27,7 @@
 				<row>
 					<label value="@load(sortfield.name)" />
 					<listbox mold="select"
+						onSelect="@command('onFieldDirection')"
 						selectedItem="@bind(sortfield.direction)">
 						<listitem label="ascending" value="ascending" />
 						<listitem label="descending" value="descending" />
