--- a/src/main/webapp/WEB-INF/zul/update/uploadTxt.zul
+++ b/src/main/webapp/WEB-INF/zul/update/uploadTxt.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -82,13 +82,15 @@
 	<listbox id="threadList" model="@load(upload.updateList)"
 		mold="paging" visible="@load(upload.updateListNotEmpty)">
 		<auxhead>
-			<auxheader colspan="4">
+			<auxheader colspan="6">
 				<button label="Remove non-running"
 					onClick="@command('onPurge')" />
 			</auxheader>
 		</auxhead>
 		<listhead>
 			<listheader label="Start time" hflex="min" />
+			<listheader label="End time" hflex="min" />
+			<listheader label="Duration" hflex="min" />
 			<listheader label="Media name" hflex="min" />
 			<listheader label="Status" hflex="min" />
 			<listheader />
@@ -97,6 +99,10 @@
 			<listitem>
 				<listcell
 					label="@load(thread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+				<listcell
+					label="@load(thread.endTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+				<listcell
+					label="@load(thread.duration) @converter('com.jaeksoft.searchlib.web.converter.DurationConverter')" />
 				<listcell label="@load(thread.mediaName)" />
 				<listcell label="@load(thread.info)" />
 				<listcell />
